# RustWebAPITemplate

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd_legacy/: hmac_hasher.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/model/: activity.rs  base.rs  error.rs  mod.rs  project.rs  task.rs  user.rs
crates/libs/lib-rpc/src/: activity_rpc.rs  error.rs  lib.rs  params.rs  params_mongo.rs  resources.rs  task_rpc.rs
crates/libs/lib-rpc/src/router/: mod.rs  rpc_handler.rs
crates/libs/lib-rpc/src/rpcs/: activity_rpc.rs  mod.rs  project_rpc.rs  task_rpc.rs
crates/libs/lib-utils/src/: time.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  (+6 more)
examples/: quick_dev.rs
sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
src/: config.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: activity.rs  base.rs  error.rs  mod.rs  sport.rs  task.rs  user.rs
src/model/store/: mod.rs
src/token/: mod.rs
src/utils/: mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
src/web/rpc/: activity_rpc.rs  mod.rs  params_mongo.rs  task_rpc.rs
(+4 files in other folders)
